# plocate-xnu

./: .clang-format  .gitignore  .gitmodules  Makefile  NEWS  README  access_rx_cache.cpp  access_rx_cache.h  bench.cpp  bind-mount.cpp  bind-mount.h  complete_pread.cpp  complete_pread.h  conf.cpp  conf.h  database-builder.cpp  database-builder.h  db.h  dprintf.h  endian_compat.h  endian_darwin_compat.h  io_uring_engine.cpp  io_uring_engine.h  lib.cpp  lib.h  meson.build  meson_options.txt  mkdir.sh  mntent_compat.cpp  mntent_compat.h  mntent_darwin_compat.cpp  mntent_darwin_compat.h  needle.cpp  needle.h  options.h  parse_trigrams.cpp  parse_trigrams.h  plocate-build.8  plocate-build.cpp  plocate-updatedb.service.in  (+14 more)
